gcc/testsuite/gdc.test/compilable/imports/test19609a.d
deprecated([]) module imports.test19609a;
