gcc/testsuite/gdc.test/fail_compilation/imports/fail19609a.d
deprecated([""]) module imports.fail19609a;
